# contract-tracker

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py  approval_engine.py  config.py  dashboard.py  database.py  imap_poller.py  llm_classifier.py  logging_conf.py  models.py  subject_parser.py  thread_parser.py
scripts/: backfill.py  init_db.py
tests/: test_subject_parser.py
