[project]
name = "contract-tracker"
version = "0.1.0"
description = "Email-driven contract-approval tracker with LLM reply classification"
requires-python = ">=3.10"
dependencies = [
    "imap-tools>=1.7.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "openai>=1.40.0",
    "apscheduler>=3.10.4",
    "streamlit>=1.36.0,<1.50",
    "pandas>=2.2.0,<3",
    "numpy<2",
    "structlog>=24.2.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
